# x-thread-extractor

./: .env.example  .gitignore  README.md  example_output.json  pyproject.toml  requirements.txt
src/: __init__.py  api.py  cli.py  extractor.py  llm.py  models.py
x_thread_extractor/: api.py  cli.py  extractor.py  llm.py  models.py
